update python study

--- a/屁眼教程/屁眼教程.md
+++ b/屁眼教程/屁眼教程.md
@@ -1,6 +1,4 @@
-### 基础
-
-​	
+#### 基础
 
 ```python
 
@@ -38,4 +36,247 @@ print(float('8.5') + 5)  # 单精度，这里不能用Int
 2、系统关键字不能做变量名使用
 3、除了下划线之个，其它符号不能做为变量名使用
 4、Python的变量名是除分大小写的，例如：name和Name就是两个变量名，而非相同变量
+
+#### 容器
+
+- 列表的基本形式比如： [1,3,6,10] 或者 [‘yes’,’no’,’OK’] 
+- 元组的基本形式比如： (1,3,6,10) 或者 (‘yes’,’no’,’OK’) 
+- 字符串的基本形式比如： ’hello’
+
+##### 列表操作
+
+1. 索引
+
+   ```python
+   a=[1,2,3,4,5]
+   print(a[2])
+   ```
+
+   
+
+2. 切片
+
+   ```python
+   a[开始索引:结束索引:步长]
+   #例：
+   c='hello'
+   c[0:3] #'hel'
+   ```
+
+   
+
+3. 序列相加
+
+   ```python
+   [1,2,3]+[4,5,6]      #[1, 2, 3, 4, 5, 6]
+   'hello,'+'world!'    #'hello,world!'
+   ```
+
+   
+
+4. 成员资格
+
+   ```python
+   a="hello"
+   print('o' in a)#True
+   print("t" in a)#False
+   ```
+
+##### 常用函数
+
+1. list()：吧一个序列转换成一个列表
+
+   ```python
+   list('hello')
+   ['h', 'e', 'l', 'l', 'o']
+   ```
+
+2. 元素赋值、删除
+
+   元素删除：del a[索引号]
+
+   元素赋值：a[索引值]=值
+
+3. 分片赋值
+
+   为列表某一范围内的元素赋值，使用方式：
+
+   a[开始索引:结束索引]=list(值)
+
+   ```python
+   b=list('hello')
+   b
+   ['h', 'e', 'l', 'l', 'o']
+   b[2:4]=list('yy')
+   b
+   ['h', 'e', 'y', 'y', 'o']
+   ```
+
+   
+
+4. 列表方法
+
+   - a.insert(position,value)：给列表a的n索引位置插入一个蒜素
+
+   - a.append(value)：给列表最后添加元素
+
+   - a.index(value)：返回阿列表中元素value第一次出现的索引位置
+   - a.remove(value)：删除a列表中第一个value元素
+   - a.sort()：将a列表从大到小排列，如果要逆序有个reverse=True
+
+5. 字典
+
+   键值对的容器格式：
+
+   ```python
+   {'age': 27, 'name': 'jiayounet'}
+   ```
+
+   - dict函数：用户创建字典
+
+     ```python
+     #dict(参数1=值1,参数2=值2, …)={参数1:值1, 参数2=值2, …}
+     a = dict(name='jiayounet',age=27)
+     {'age': 27, 'name': 'jiayounet'}
+     'age' in a #True
+     'jiayounet' in a #False
+     ```
+
+#### 函数
+
+1. ​	定义：
+
+   def 函数名(参数1，参数2):
+
+   ​	函数代码
+
+   ```python
+   def square(x):
+   	return x*x
+   ```
+
+2. 默认参数
+
+   ```python
+   #可写函数说明
+   def printinfo( name, age = 35 ):
+      "打印任何传入的字符串"
+      print "Name: ", name
+      print "Age ", age
+      return
+    
+   #调用printinfo函数
+   printinfo( age=50, name="miki" )
+   printinfo( name="miki" )
+   ```
+
+3. 动态参数
+
+   ```python
+   def functionname([formal_args,] *var_args_tuple ):
+      "函数_文档字符串"
+      function_suite
+      return [expression]
+   例子：
+   # 可写函数说明
+   def printinfo( arg1, *vartuple ):
+      "打印任何传入的参数"
+      print "输出: "
+      print arg1
+      for var in vartuple:
+         print var
+      return
+    
+   # 调用printinfo 函数
+   printinfo( 10 )
+   printinfo( 70, 60, 50 )
+   ```
+
+4. 匿名函数
+
+   语法：lambda [arg1 [,arg2,.....argn]]:expression
+
+   ```python
+   # 可写函数说明
+   sum = lambda arg1, arg2: arg1 + arg2
+    
+   # 调用sum函数
+   print "相加后的值为 : ", sum( 10, 20 ) #30
+   print "相加后的值为 : ", sum( 20, 20 ) #40
+   ```
+
+#### if
+
+语法：
+
+```python
+if condition :
+	执行代码
+
+#例子：
+j=2.67
+if j<3:
+	print('j<3')
+elif j>=3 and j < 10:
+    print('3<=j<10')
+else:
+    print("j>=10")
+
+
+```
+
+####  while
+
+1. ​	语法
+
+   ```python
+   while condition:
+       执行语句
+       if 条件:
+           break
+   #例：
+   count = 0
+   while (count < 9):
+      print 'The count is:', count
+      count = count + 1
+      if count == 8:
+       	break;
+   ```
+
+#### for
+
+ ```python
+  a = [1,2,3,4,5]
+  for i in a:
+  	print(i)
+ ```
+
+####   for .... else
+
+​	在 python 中，for … else 表示这样的意思，for 中的语句和普通的没有区别，else 中的语句会在循环正常执行完（即 for 不是通过 break 跳出而中断的）的情况下执行，while … else 也是一样。
+
+```
+for num in range(10,20):  # 迭代 10 到 20 之间的数字
+   for i in range(2,num): # 根据因子迭代
+      if num%i == 0:      # 确定第一个因子
+         j=num/i          # 计算第二个因子
+         print '%d 等于 %d * %d' % (num,i,j)
+         break            # 跳出当前循环
+   else:                  # 循环的 else 部分
+      print num, '是一个质数'
+```
+
+
+
+#### 列表推导式（轻量级循环）
+
+```
+[输出值 for 条件]
+例子：
+
+```
+
+
+
+
 
